# Ejemplos-Codigo-C-Flex-Bison

./: README.md
Arreglos en C 2026/: 1.recorrer.c  2.por_parametro.c  3.retornar.c  CMakeLists.txt  arreglos.md  main.c
Arreglos en C 2026/Ejemplos Arreglos/: Coordenadas.c  Puntajes.c  TamanioDelArreglo.c  por_parametro_2.c  por_parametro_bidimensional.c
Bison y Flex 2026/: bisonYFlex.md
Bison y Flex 2026/4. Validación de Tipos/: README.md  tp.code-workspace
Bison y Flex 2026/4. Validación de Tipos/src/: Validacion_Tipos.l  Validacion_Tipos.y
Bison y Flex 2026/5. Calculadora con Funciones y Variables (TS gestionada por SCANNER)/: README.md
Bison y Flex 2026/5. Calculadora con Funciones y Variables (TS gestionada por SCANNER)/src/: calc.c  calc.h  mfcalc.l  mfcalc.y
Bison y Flex 2026/6. Calculadora con Funciones y Variables (TS gestionada por PARSER)/: GNUmakefile  README.md
Bison y Flex 2026/6. Calculadora con Funciones y Variables (TS gestionada por PARSER)/src/: calc.c  calc.h  mfcalc.l  mfcalc.y
Estructuras Anidadas en C 2026/: estructurasAnidadas.md
Flex 2026/4. Uso de definiciones de ERX/: README.md
Flex 2026/4. Uso de definiciones de ERX/src/: Definiciones_ERX.l
Flex 2026/5. Uso de variable yyleng/: README.md
Flex 2026/5. Uso de variable yyleng/src/: Uso_yyleng.l
Flex 2026/6. Uso de variables globales y funciones de usuario/: README.md
Flex 2026/6. Uso de variables globales y funciones de usuario/mkframework/: main.mk
Flex 2026/6. Uso de variables globales y funciones de usuario/src/: Uso_Variables_Globales_Funciones_Usuario.l  (+2 more)
(+19 files in other folders)
